<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fboard</string>

    <string name="title_activity_settings">Fboard Settings</string>

    <string name="permission_sync_settings_label">Sync Settings</string>
    <string name="permission_sync_settings_description">Sync common settings with other Fboard apps</string>

    <string name="pref_header_method_title">Input Method</string>
    <string name="pref_method_enable_title">Enable Input Method</string>
    <string name="pref_method_enable_summary">Select \'%s\' to enable.</string>
    <string name="pref_method_choose_title">Choose Input Method</string>
    <string name="pref_method_choose_summary">Choose \'%s\' to start using.</string>

    <string name="pref_header_appearance_title">Appearance</string>
    <string name="pref_appearance_theme_title">Keyboard Theme</string>
    <string name="theme_static">Static</string>
    <string name="theme_dynamic">Dynamic</string>
    <string name="pref_appearance_keyboard_height_title">Keyboard Height</string>
    <string name="pref_appearance_unify_height_title">Unify Keyboard Heights</string>
    <string name="pref_appearance_unify_height_summary">Keep entire keyboard height always the same.</string>
    <string name="pref_appearance_default_height_title">Use Default Height</string>
    <string name="pref_appearance_default_height_summary">Keep the keyboard height synced with base settings.</string>
    <string name="pref_appearance_haptic_feedback_title">Haptic Feedback</string>
    <string name="pref_appearance_sound_feedback_title">Sound Feedback</string>

    <string name="pref_sync_settings_title">Sync Settings</string>
    <string name="pref_sync_settings_summary">Sync the settings with other Fboard apps.</string>

    <string name="pref_header_keyboard_title">Keyboard</string>

    <string name="pref_keyboard_layout_title">Keyboard Layout</string>

</resources>